Filing away changes before I break the things that aren't already broken